--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,70 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
 </head>
 
 <body>
-    123
+    <div class="warp">
+        <header>头部</header>
+        <div class="con">
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <dl>
+                            <dt><img src="img/list.gif" alt=""></dt>
+                            <dd>美食</dd>
+                        </dl>
+                        <dl>
+                            <dt><img src="img/list.gif" alt=""></dt>
+                            <dd>美食</dd>
+                        </dl>
+                        <dl>
+                            <dt><img src="img/list.gif" alt=""></dt>
+                            <dd>美食</dd>
+                        </dl>
+                        <dl>
+                            <dt><img src="img/list.gif" alt=""></dt>
+                            <dd>美食</dd>
+                        </dl>
+                        <dl>
+                            <dt><img src="img/list.gif" alt=""></dt>
+                            <dd>美食</dd>
+                        </dl>
+                        <dl>
+                            <dt><img src="img/list.gif" alt=""></dt>
+                            <dd>美食</dd>
+                        </dl>
+                        <dl>
+                            <dt><img src="img/list.gif" alt=""></dt>
+                            <dd>美食</dd>
+                        </dl>
+                        <dl>
+                            <dt><img src="img/list.gif" alt=""></dt>
+                            <dd>美食</dd>
+                        </dl>
+                        <dl>
+                            <dt><img src="img/list.gif" alt=""></dt>
+                            <dd>美食</dd>
+                        </dl>
+                        <dl>
+                            <dt><img src="img/list.gif" alt=""></dt>
+                            <dd>美食</dd>
+                        </dl>
+                    </div>
+                    <div class="swiper-slide">
+                        2
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
+<script src="./js/lib/swiper.min.js"></script>
+<script src="./js/lib/jquery-3.1.1.min.js"></script>
+
+<script src="./js/index.js"></script>
 
 </html>
